2006-01-04  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles.src: use temporal mirror for tigrux's tutorial

2006-01-04  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: added EveryGUI

2006-01-04  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: fixed typo in Gnome-schedule URL

2006-01-03  Johan Dahlin  <jdahlin@async.com.br>

	* applications.src: Add TorApplet

	* articles.src: Update URL for Dimitri Paters tutorial.

2006-01-03  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added Gnome-schedule

2006-01-02  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* newsitems.py: Announce new docs.

	* Makefile (LOCAL_TARBALLS),
	* documentation/pygnomevfs.tar.bz2,
	* reference.src:  Add pygnomevfs docs, by David Trowbridge.

2005-12-05  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

        * people.src: Added myself to the list :)
	* MAINTAINERS: Added file with a list of latest commiters
	
2005-12-05  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles/cairo-pygtk-widgets/
	* articles/cairo-pygtk-widgets/cairo-pygtk-widgets.htm
	* articles/cairo-pygtk-widgets/cairo-pygtk-widgets.css
	* articles/cairo-pygtk-widgets/clock_ex1.png
	* articles/cairo-pygtk-widgets/clock_ex2.png
	* articles/cairo-pygtk-widgets/clock_ex3.png
	* articles/cairo-pygtk-widgets/clock_ex1.py
	* articles/cairo-pygtk-widgets/clock_ex2.py
	* articles/cairo-pygtk-widgets/clock_ex3.py
	* articles/cairo-pygtk-widgets/*: Added previous files
	to hold a local copy of the article.
	* articles.src: fix typo

2005-12-05  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* newsitems.py: news entry for the article "Writing
	a Widget Using Cairo and PyGTK 2.8" by Lawrence Oluyede

2005-12-05  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles.src: Add article "Writing a Widget Using
	Cairo and PyGTK 2.8" by Lawrence Oluyede (patch by
	Gian Mario Tagliaretti)
