@@ -1,3 +1,7 @@
+2006-01-09  Johan Dahlin  <jdahlin@async.com.br>
+
+	* newsitems.py (item): PyGObject 2.9.0
+
 2006-01-04  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* articles.src: use temporal mirror for tigrux's tutorial
